--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@finsweet/attributes-scrolldisable": "^1.6.2",
     "gsap": "^3.12.4",
     "lenis": "^1.1.6",
     "splitting": "^1.1.0",
