--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@finsweet/attributes-scrolldisable": "^1.6.2",
     "gsap": "^3.12.5",
     "lenis": "^1.1.6",
+    "mouse-follower": "^1.1.2",
     "splitting": "^1.1.0",
     "swiper": "^11.0.5"
   },
